--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,29 +36,66 @@ bind Enter copy-mode # enter copy mode
 # bind p paste-buffer  # paste from the top pate buffer
 # bind P choose-buffer # choose which buffer to paste from
 
+# toogle window name with pane_current_path
+bind r run-shell 'if [ "#{window_name}" = "Window" ]; then tmux rename-window "#{b:pane_current_path}"; else tmux rename-window "Window"; fi'
+
+# configure how window list is shown at choose-tree
+bind w choose-tree -w -F "[#{window_index}] #{window_name} - #{b:pane_current_path} (#{pane_current_command})"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux#v2.1.1'
 
-set -g @catppuccin_flavor "mocha" # mocha, macchiato
-set -g @catppuccin_window_status_style "rounded" #basic, rounded
-set -g @catppuccin_window_flags "none" # none, icon, or text
-set -g @catppuccin_window_current_text " #{b:pane_current_path}"
-set -g @catppuccin_window_text " #{b:pane_current_path}"
+# Configure Catppuccin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_status_background "none"
+set -g @catppuccin_window_status_style "none"
+set -g @catppuccin_pane_status_enabled "off"
+set -g @catppuccin_pane_border_status "off"
+set -g @thm_bg "#191724" # rose pine bg
 
-set -g status on #[off | on | 2 | 3 | 4 | 5]
-set -g status-justify absolute-centre #[left | centre | right | absolute-centre]
-set -g status-style "bg=#{@thm_bg}"
-set -g status-position top #[top | bottom]
-
+# status left look and feel
 set -g status-left-length 100
 set -g status-left ""
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_maroon}]  #{pane_current_command} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
 
+# status right look and feel
 set -g status-right-length 100
-# set -g status-right "#{E:@catppuccin_status_application}"
-set -g status-right "#{E:@catppuccin_status_session}"
+set -g status-right ""
+
+# Configure Tmux
+set -g status-position top
+set -g status-style "bg=#{@thm_bg}"
+set -g status-justify "absolute-centre"
+
+# pane border look and feel
+setw -g pane-border-status top
+setw -g pane-border-format ""
+setw -g pane-active-border-style "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
+setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
+setw -g pane-border-lines single
+
+# window look and feel
+set -wg automatic-rename on
+set -g automatic-rename-format "Window"
+
+set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
+set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
+set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
+set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
+set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
+
+set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
